# alfred-ai-cos

./: .env.example  .env.production.example  .gitignore  ARCHITECTURE.md  HANDOFF.md  Makefile  README.md  SECURITY.md  TODO.md  bunfig.toml  docker-compose.prod.yml
backend/: Dockerfile  pyproject.toml
backend/app/: main.py
backend/app/capabilities/: __init__.py  base.py
backend/app/core/: config.py
backend/app/db/: enums.py
backend/app/llm/: base.py
backend/app/schemas/: api.py  billing.py  llm.py  today.py
backend/app/services/: actions.py  assistant.py  billing.py  briefing.py  calendar.py  classification_adjust.py  (+35 more)
backend/migrations/: env.py
backend/scripts/: backfill_sender_classifications.py  build_sms_shortcut.py  classify_inbox_sample.py  diagnose_gmail_sync.py  test_reply_flow.py
backend/tests/: conftest.py  fakes.py  test_account_deletion.py  test_assistant.py  test_assistant_chat.py  test_billing.py  test_briefing.py  test_calendar_event.py  test_calendar_sync.py  test_capture.py  test_classification_adjust.py  test_draft_revision.py  test_execution.py  test_extraction_guard.py  test_forward_inbox.py  test_gmail_body.py  test_gmail_ingest.py  test_google_oauth.py  test_habits.py  test_inbox_primary_filter.py  test_inbox_resolution.py  test_inbox_scopes.py  test_inbox_view.py  test_ingestion_sync.py  test_learning.py  test_mail_sync.py  test_meeting_prep.py  test_meetings_today.py  test_message_body.py  test_message_read.py  test_notifications.py  test_onboarding.py  test_outbound_tracking.py  test_planning.py  test_planning_dismiss.py  test_prep_draft.py  test_priority_context.py  test_priority_spam_shield.py  test_priority_warmup.py  test_refused_capabilities.py  (+17 more)
(+200 files in other folders)
